fix 'StepsNavigation' Component styles: add margin left, cause on small device look ugly

--- a/src/Components/StepsNavigation/StepsNavigation.css
+++ b/src/Components/StepsNavigation/StepsNavigation.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 35px 10px;
+    margin-left: 50px;
 }
 
 .StepsNavigation__item{
